Fixed alignment

--- a/Core/GrowthWare.Web.Angular/Angular/projects/gw-frontend/src/app/skins/default/layout/default-header/default-header.component.scss
+++ b/Core/GrowthWare.Web.Angular/Angular/projects/gw-frontend/src/app/skins/default/layout/default-header/default-header.component.scss
@@ -4,12 +4,12 @@
 }
 
 .mat-toolbar__ul {
-  padding-top: .5rem;
+  padding-top: 1rem;
 }
 
 .version__span {
   display: inline-block;
-  padding-top: .8rem;
+  padding-top: 1.2rem;
 }
 
 ul li {
